BUG: Fix hero section size and alignment on mobile

--- a/pages/404.module.scss
+++ b/pages/404.module.scss
@@ -1,12 +1,14 @@
 .hero-img {
-  height: 17.5rem;
+  height: 20rem;
   width: auto;
-  margin: 0 auto;
+  margin: 0 auto 2rem  auto;
   display: block;
 
   @media (max-width: 650px) {
     width: 100%;
     height: auto;
+    margin: 0 auto;
+    padding: 0 1rem;
   }
 }
 
